[CSS] fix checkboxes alignment

--- a/app/assets/stylesheets/partials/_forms.scss
+++ b/app/assets/stylesheets/partials/_forms.scss
@@ -44,7 +44,7 @@ form label {
    margin-bottom: 5px;
    display: inline-block;
   float: none;
-  width: 10%;
+  width: 13%;
   position: relative;
   line-height: 1.4rem;
   padding: 10px;
